add de arquivos

--- a/app.html
+++ b/app.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/01Artboard 46.png">
     <title>Caminhão GUEP</title>
 </head>
 <body>
-    <canvas class="canvas"></canvas>
+    <section class="intro -is-disabled">
+        <div class="intro__list">
+            <img class="intro__logo" src="assets/img/guep-logo.png" alt="Logo da GUEP">
+            <button class="intro__start --red">Iniciar</button>
+        </div>
+	</section>
+
+	<section class="game -is-enabled">
+
+		<div class="game__truck"></div>
+	
+	</section>
+
+	<script src="assets/js/jquery-1.12.0.min.js"></script>
+	<script src="assets/js/game.js"></script>
 </body>
 </html>
