add de mensagem reiniciar o jogo

--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
         <div class="intro__list">
             <img class="intro__logo" src="assets/img/guep-logo.png" alt="Logo da GUEP">
             <button class="intro__start --red">Iniciar</button>
-            <!-- <h2></h2> -->
+            <!-- <h2>Deseja reiniciar o jogo?</h2> -->
             <button class="intro__restart --purple">Reiniciar</button>
         </div>
 	</section>
