add de arquivos de cena

--- a/app.html
+++ b/app.html
@@ -12,16 +12,17 @@
     <section class="intro">
         <div class="intro__list">
             <img class="intro__logo" src="assets/img/guep-logo.png" alt="Logo da GUEP">
-            <button class="intro__start --red">Iniciar</button>
+            <button class="intro__start --purple">Iniciar</button>
             <!-- <h2>Deseja reiniciar o jogo?</h2> -->
-            <button class="intro__restart --purple">Reiniciar</button>
+           <!-- <button class="intro__restart --purple">Reiniciar</button> -->
         </div>
 	</section>
 
 	<section class="game"> <!--| --start --walking --end |-->
-        <img class="game__scene" src="assets/img/scene.jpg" alt="Cenário">
+        <img class="game__scene" src="assets/img/scene.png" alt="Cenário">
+        <img class="game__object" src="assets/img/woods-01.png" alt="Objeto de Cenário - Árvores">
         <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
-        <button class="game__next-step">Próxima Etapa</button>
+        <button class="game__next-step --red">Próxima Etapa > </button>
 	</section>
 
 	<script src="assets/js/jquery-1.12.0.min.js"></script>
