--- a/app.html
+++ b/app.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/img/01Artboard 46.png">
-    <title>Caminhão GUEP</title>
+    <link rel="icon" href="assets/img/guep-favicon.png">
+    <title>Trilha GUEP</title>
 </head>
 <body>
     <section class="intro">
@@ -22,7 +23,12 @@
         <img class="game__scene" src="assets/img/scene.png" alt="Cenário">
         <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
         <button class="game__next-step --red">Próxima Etapa > </button>
-        <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
+        <!-- <div class="game__objects">
+            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
+            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
+            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
+            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
+        </div> -->
 	</section>
 
 	<script src="assets/js/jquery-1.12.0.min.js"></script>
