--- a/app.html
+++ b/app.html
@@ -23,8 +23,8 @@
         <img class="game__scene" src="assets/img/scene.png" alt="Cenário">
         <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
         <button class="game__next-step --red">Próxima Etapa > </button>
+        <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
         <!-- <div class="game__objects">
-            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
             <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
             <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
             <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
