Update de scene

--- a/app.html
+++ b/app.html
@@ -20,7 +20,7 @@
 	</section>
 
 	<section class="game"> <!--| --start --walking --end |-->
-        <img class="game__scene" src="assets/img/scene.png" alt="Cenário">
+        <img class="game__scene" src="assets/img/scene-v3.png" alt="Cenário">
         <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
         <button class="game__next-step --red">Próxima Etapa > </button>
         <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
