--- a/app.html
+++ b/app.html
@@ -22,6 +22,7 @@
 	<section class="game"> <!--| --start --walking --end |-->
         <img class="game__scene" src="assets/img/scene-v3.png" alt="Cenário">
         <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
+        <img class="truck__wheels" src="assets/img/roda-teste.png" alt="Roda Caminhão">
         <button class="game__next-step --red">Próxima Etapa > </button>
         <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
         <!-- <div class="game__objects">
