preciso corrigir as rodinhas no próximo commit

--- a/app.html
+++ b/app.html
@@ -19,10 +19,14 @@
         </div>
 	</section>
 
-	<section class="game"> <!--| --start --walking --end |-->
+	<section class="game"> <!--| --start --driving --end |-->
         <img class="game__scene" src="assets/img/scene-v3.png" alt="Cenário">
-        <img class="game__truck" src="assets/img/truck-smoke.png" alt="Caminhão">
-        <img class="truck__wheels" src="assets/img/roda-teste.png" alt="Roda Caminhão">
+        <img class="game__truck" src="assets/img/truck-smoke-test.png" alt="Caminhão">
+        <div class="game__wheels">
+            <img class="truck__wheel --a --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+            <img class="truck__wheel --b --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+            <img class="truck__wheel --c --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+        </div>
         <button class="game__next-step --red">Próxima Etapa > </button>
         <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
         <!-- <div class="game__objects">
