Melhorias de cena, montanha e carrinho

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
 
 	<section class="game"> <!--| --start --driving --end |-->
         <img class="game__scene" src="assets/img/scene-v3.png" alt="Cenário">
-        <img class="game__truck" src="assets/img/truck-smoke-test.png" alt="Caminhão">
-        <div class="game__wheels">
-            <img class="truck__wheel --a --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
-            <img class="truck__wheel --b --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
-            <img class="truck__wheel --c --driving" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+        <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha">
+        <div class="game__truck">
+            <img class="game__structure" src="assets/img/truck-smoke-test.png" alt="Carroceria do caminhão">
+            <div class="game__wheels">
+                <img class="truck__wheel --a" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+                <img class="truck__wheel --b" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+                <img class="truck__wheel --c" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
+            </div>
         </div>
+
         <button class="game__next-step --red">Próxima Etapa > </button>
         <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
         <!-- <div class="game__objects">
