--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</section>
 
 	<section class="game"> <!--| --start --driving --end |-->
-        <img class="game__scene" src="assets/img/scene-v3.png" alt="Cenário">
+        <img class="game__scene" src="assets/img/scene-v5.png" alt="Cenário">
         <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha">
         <div class="game__truck">
             <img class="game__structure" src="assets/img/truck-smoke-test.png" alt="Carroceria do caminhão">
@@ -31,13 +31,8 @@
             </div>
         </div>
 
-        <button class="game__next-step --red">Próxima Etapa > </button>
-        <!-- <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores"> -->
-        <!-- <div class="game__objects">
-            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
-            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
-            <img class="game__woods" src="assets/img/woods-02.png" alt="Objeto de Cenário - Árvores">
-        </div> -->
+        <button class="game__next-step --blue">Próxima Etapa > </button>
+
 	</section>
 
 	<script src="assets/js/jquery-1.12.0.min.js"></script>
