update de function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 	</section>
 
-	<section class="game"> <!--| --start --driving --end |-->
+	<section class="game -is-disabled"> <!--| --start --driving --end |-->
         <img class="game__scene" src="assets/img/scene-v5.png" alt="Cenário">
         <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha">
         <div class="game__truck">
