correção de menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<section class="game -is-disabled"> <!--| --start --driving --end |-->
         <img class="game__scene" src="assets/img/scene-v5.png" alt="Cenário">
-        <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha">
+        <!-- <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha"> -->
         <div class="game__truck">
             <img class="game__structure" src="assets/img/truck-smoke-test.png" alt="Carroceria do caminhão">
             <div class="game__wheels">
