--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="intro__list">
             <img class="intro__logo" src="assets/img/guep-logo.png" alt="Logo da GUEP">
             <button class="intro__start --purple">Iniciar</button>
+            <h2>(Versão de demonstração)</h2>
             <!-- <h2>Deseja reiniciar o jogo?</h2> -->
            <!-- <button class="intro__restart --purple">Reiniciar</button> -->
         </div>
