update de button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <button class="game__next-step --blue">Próxima Etapa > </button>
+        <button class="game__next-step --blue"></button>
 
 	</section>
 
