update de truck com after e before

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
         <img class="game__scene" src="assets/img/scene-v5.png" alt="Cenário">
         <!-- <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha"> -->
         <div class="game__truck">
-            <img class="game__structure" src="assets/img/truck-smoke-test.png" alt="Carroceria do caminhão">
-            <div class="game__wheels">
-                <img class="truck__wheel --a" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
-                <img class="truck__wheel --b" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
-                <img class="truck__wheel --c" src="assets/img/truck-wheel.png" alt="Roda Caminhão">
-            </div>
+            <span class="truck__animation--a">
+                <span class="truck__animation--b">
+                    <img class="truck__structure" src="assets/img/truck-smoke-test.png" alt="Carroceria do caminhão">
+                </span>
+            </span>
         </div>
 
         <button class="game__next-step --blue"></button>
