--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<section class="game -is-disabled"> <!--| --start --driving --end |-->
         <img class="game__scene" src="assets/img/scene-v6.png" alt="Cenário">
-        <!-- <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha"> -->
+        <img class="game__mountain" src="assets/img/mountain.png" alt="Montanha">
         <div class="game__truck">
             <span class="truck__animation--a">
                 <span class="truck__animation--b">
@@ -30,8 +30,15 @@
                 </span>
             </span>
         </div>
+        <!-- <div class="game__truck">
+                <span class="truck__animation--a">
+                    <span class="truck__animation--b">
+                        <img class="truck__structure" src="assets/img/truck-structure.png" alt="Carroceria do caminhão">
+                    </span>
+                </span>
+        </div> -->
         <div class="game__typewriter">
-            <p class="game__quote --a">Nossa, o outro motorista terá que esperar algumas horas para ser liberado.</p>
+            <p class="game__quote --a">Putz, esse motorista terá que esperar algumas horas para ser liberado.</p>
             <!--<p class="game__quote --b">Pelo que estão dizendo, ele parece estar com alguns problemas criminais...</p> -->
         </div>
         <button class="game__next-step --blue"></button>
