update de truck

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="intro__list">
             <img class="intro__logo" src="assets/img/guep-logo.png" alt="Logo da GUEP">
             <button class="intro__start --purple">Iniciar</button>
-            <h2>(Versão de demonstração)</h2>
+            <h2>Versão de demonstração -- Visualizar na Viewport<br> da TV de 40'(1920 x 1080)</h2>
+            <p>(Ctrl + shift + i)</p>
             <!-- <h2>Deseja reiniciar o jogo?</h2> -->
            <!-- <button class="intro__restart --purple">Reiniciar</button> -->
         </div>
