--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                         </span>
                     </span>
                 </div>
+                <div class="game__truck --guep">
+                    <span class="truck__animation--a">
+                        <span class="truck__animation--b">
+                            <img class="truck__structure" src="assets/img/truck-structure-guep.png" alt="Carroceria do Caminhão da GUEP">
+                        </span>
+                    </span>
+                </div>
                 <div class="game__typewriter">
                     <p class="game__quote --a">Putz, esse motorista terá que esperar algumas horas para ser liberado.</p>
                 </div>        
