update de imagens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </span>
                 </div>
                 <div class="game__typewriter">
-                    <p class="game__quote --a">Putz, esse motorista terá que esperar algumas horas para ser liberado.</p>
+                    <p class="game__quote --a">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
                 </div>        
             </div>
 
