update de scenario e bugfix de intro

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="game__main">
         
         <div class="game__layers">
-            <div class="game__scenario">
+            <div class="game__scenario -is-disabled">
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
                 <div class="game__truck">
