--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         </div>
 	</section>
     
-    <section class="game__main">
+    <section class="game__main">   
         
         <div class="game__layers">
             <div class="game__scenario -is-disabled">
+                <p class="game__quote">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
                 <div class="game__truck">
@@ -40,11 +41,7 @@
                         </span>
                     </span>
                 </div>
-                <div class="game__typewriter">
-                    <p class="game__quote --a">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                </div>        
             </div>
-
         </div>
     </section>
 
