update boxes em step 7

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="game__quote">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
-                <div class="game__truck">
+                <div class="game__truck --concorrente">
                     <span class="truck__animation--a">
                         <span class="truck__animation--b">
                             <img class="truck__structure" src="assets/img/truck-structure-gray.png" alt="Carroceria do Caminhão do Concorrente">
