--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         
         <div class="game__layers">
             <div class="game__scenario -is-disabled">
-                <p class="game__quote">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step1">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step2">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step3">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step4">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step5">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step6">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step7">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
                 <div class="game__truck">
