correção de texto

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <div class="game__layers">
             <div class="game__scenario -is-disabled">
                 <p class="game__quote --step1">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step2">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step3">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step4">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step5">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step6">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
-                <p class="game__quote --step7">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
+                <p class="game__quote --step2">Pelo que estão dizendo, ele parece que está com problemas criminais...</p>
+                <p class="game__quote --step3">Com a <i>GUEP</i>, basta 3 pesquisas e o motorista já pode ser liberado!</p>
+                <p class="game__quote --step4">Tudo certo! O motorista já está apto para carregar!</p>
+                <p class="game__quote --step5">Agora é o momento da papelada, com a <i>GUEP</i> é tudo mais fácil e seguro!</p>
+                <p class="game__quote --step6">Droga, curvas perigosas!</p>
+                <p class="game__quote --step7">Acidentes acontecem, porém com a <i>GUEP</i>, tudo flui de forma simples!</p>
+                <p class="game__quote --step8">Hora do almoço! A <i>GUEP</i> tem o cuidado com as necessidades do motorista!</p>
+                <p class="game__quote --step9">Controle de Jornada, pernoite, abastecimento e muito mais, com a GUEP, é garantido!</p>
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
                 <div class="game__truck --concorrente">
