update de cenas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <p class="game__quote --step6">Droga, curvas perigosas!</p>
                 <p class="game__quote --step7">Acidentes acontecem, porém com a <i>GUEP</i>, tudo flui de forma simples!</p>
                 <p class="game__quote --step8">Hora do almoço! A <i>GUEP</i> tem o cuidado com as necessidades do motorista!</p>
-                <p class="game__quote --step9">Controle de Jornada, pernoite, abastecimento e muito mais, com a GUEP, é garantido!</p>
+                <p class="game__quote --white --step9">Controle de jornada, pernoite, abastecimento, etc. Com a <i>GUEP</i>, é garantido!</p>
+                <p class="game__quote --white --step10">Tudo feito! A entrega chegou onde devia chegar!</p>
+                <p class="game__quote --white --step11">Os produtos tem assinatura de qualidade <i>GUEP!</i></p>
+                <p class="game__quote --white --step12">Obrigado por confiar na <i>GUEP</i>!</p>
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
                 <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
                 <div class="game__truck --concorrente">
