Update de step 13

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 	</section>
     
     <section class="game__main">   
-        
-        <div class="game__layers">
-            <div class="game__scenario -is-disabled">
+        <div class="game__scenario -is-disabled">
+            <div class="game__blur">
                 <p class="game__quote --step1">Oh nossa, o outro motorista terá que esperar algumas horas para ser liberado</p>
                 <p class="game__quote --step2">Pelo que estão dizendo, ele parece que está com problemas criminais...</p>
                 <p class="game__quote --step3">Com a <i>GUEP</i>, basta 3 pesquisas e o motorista já pode ser liberado!</p>
