update de image de cenário

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- Cenário -->
 
                 <img class="game__mountains" src="assets/img/scenario-mountains.png" alt="Montanha">
-                <img class="game__scene" src="assets/img/scenario.png" alt="Cenário">
+                <img class="game__scene" src="assets/img/scenario-2.png" alt="Cenário">
                 
                 <!-- Caminhão-->
                 
